# txtformat

./: 0Temp.c  0temp.c  Readme.md  install.sh  main.c  meson.build  txtformat.pro  txtformat.pro.user.808fc87  txtparser.c  txtparser.h
other/: main.c
